--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.jiseo.retrofit"
+        applicationId "com.example.jiseo.idolBTS"
         minSdkVersion 19
         targetSdkVersion 28
         versionCode 1
@@ -26,7 +26,8 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.6.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     // recyclerview
-    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:recyclerview-v7:+'
     //cardview
     implementation 'com.android.support:cardview-v7:28.0.0'
     //picasso
@@ -39,5 +40,12 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //#####################################################################
+    //          Firebase
+    //#####################################################################
+    implementation 'com.android.support:design:28.0.0'
 
+    implementation "com.google.firebase:firebase-messaging:17.3.4"
+    implementation 'com.google.firebase:firebase-core:16.0.6'
 }
+apply plugin: 'com.google.gms.google-services'
